--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,7 +1,5 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Acedemia of Kasper H. Steenstrup</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+This homepage is a gathering place of the acedemia activment of Kasper H. Steenstrup. I have done a Mater in computer science from Copenhargen University and a Ph.d in Geometry from Denmark Tenical University.
